Annotated up to dart5

--- a/materials/makefile
+++ b/materials/makefile
@@ -1,4 +1,5 @@
 fac = face.cpp
+dar = darts.cpp
 
 FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib 
 
@@ -10,3 +11,7 @@ CC = g++ ${O_LIBS} ${FLAGS}
 
 face: ${fac}
 	${CC} ${fac} -o face
+
+darts: ${dar}
+	${CC} ${dar} -o darts
+	./darts dart5.jpg
