Adding .PHONY into makefile

--- a/materials/makefile
+++ b/materials/makefile
@@ -1,7 +1,8 @@
+.PHONY : face darts
 fac = face.cpp
 dar = darts.cpp
 
-FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib 
+FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib
 
 CC = g++ ${O_LIBS} ${FLAGS}
 
