--- a/materials/makefile
+++ b/materials/makefile
@@ -1,6 +1,7 @@
 .PHONY : face darts
 fac = face.cpp
 dar = darts.cpp
+image = dart5.jpg
 
 FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib
 
@@ -15,4 +16,4 @@ face: ${fac}
 
 darts: ${dar}
 	${CC} ${dar} -o darts
-	./darts dart5.jpg
+	./darts ${image}
