Started suppress func.

--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,7 +1,9 @@
 .PHONY : sobel
 image=coins1.png
 
-CC = g++ $(O_LIBS)
+FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib
+
+CC = g++ ${O_LIBS} ${FLAGS}
 
 sobel : sobel.cpp
 	$(CC) $< -o $@
