get intersection function

--- a/line/makefile
+++ b/line/makefile
@@ -4,7 +4,7 @@ image = dart.bmp
 
 FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib
 
-CC = g++ ${O_LIBS} ${FLAGS}
+CC = g++ ${O_LIBS} ${FLAGS} -std=c++11
 
 # %: %.cpp
 # 	${CC} ${$@} -o $@
