--- a/materials/makefile
+++ b/materials/makefile
@@ -1,11 +1,12 @@
 .PHONY : face darts
 fac = face.cpp
 dar = darts.cpp
+darH = dartsHough.cpp
 image = dart5.jpg
 
 FLAGS = -I/usr/local/opt/opencv@2/include /usr/local/opt/opencv@2/lib/libopencv_core.2.4.dylib /usr/local/opt/opencv@2/lib/libopencv_highgui.2.4.dylib
 
-CC = g++ ${O_LIBS} ${FLAGS}
+CC = g++ ${O_LIBS} ${FLAGS} -std=c++11
 
 # %: %.cpp
 # 	${CC} ${$@} -o $@
@@ -17,3 +18,7 @@ face: ${fac}
 darts: ${dar}
 	${CC} ${dar} -o darts
 	./darts ${image}
+
+dartsH: ${darH}
+	${CC} ${darH} -o dartsHough
+	./dartsHough ${image}
